# QuantOpt

./: ARCHITECTURE.md  BULL_PUT_SPREAD_MECHANICS.txt  OPTION_STRAT_LIB_ENGINE_GUIDE.txt  STRATEGY_ARCHITECT_BLUEPRINT.txt  last_gex_run.txt
Earnings-Volatility-Calculator/: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
Earnings-Volatility-Calculator/src/earnings_calculator/: __init__.py  __main__.py  cache.py  calendar.py  chart.py  cli.py  gui.py  logging_config.py  options.py  proxy.py  scanner.py  sessions.py
Earnings-Volatility-Calculator/tests/: conftest.py  test_analyzer.py  test_cache.py  test_earnings.py  test_gui.py  test_gui_integration.py  test_logging_config.py  test_otc_updater.py  test_proxy.py  test_scanner.py  test_sessions.py
GEX Computer/: Data-sources  GEX.md  README.md  examples.txt  unified_gex.py
GEX Computer/Dashboard/: API_EXAMPLES.md  PROJECT_STATUS.md  README.md  TECHNICAL_ARCHITECTURE.md
GEX Computer/Dashboard/docs/: GEX_INTRADAY_FIX.md  INDEX.md
GEX Computer/Dashboard/docs/concepts/: TRADING_CONCEPTS.md
GEX Computer/Dashboard/docs/math/: OPTIONS_MATHEMATICS.md
GEX Computer/Dashboard/docs/research/: GEX_MARKET_MECHANICS.md  GREEKS_IMPLEMENTATION_RESEARCH.md
GEX Computer/modules/: gex_from_csv.py  gold_gex.py  spx_quotedata.csv
OptionStratLib/: ANALYSIS.md
OptionStratLib/Greeks-Strategy/: greeks_calculator.py  risk_calculator.py  strategy_definitions.py  streamlit_app.py
OptionStratLib/Rustbase/: Cargo.toml
OptionStratLib/Rustbase/Draws/Strategy/: bull_call_spread_profit_loss_chart.html
