[project]
name = "earnings-volatility-calculator"
version = "1.0.0"
description = "Analyzes options data around earnings events, calculates volatility metrics, and provides trade recommendations"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14",
    "curl-cffi>=0.5",
    "matplotlib>=3.10",
    "mplfinance>=0.12",
    "numpy>=2.2",
    "pandas>=2.3",
    "requests>=2.32",
    "scipy>=1.15",
    "tkcalendar>=1.6",
    "yfinance>=1.1",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "freezegun>=1.0",
]

[project.scripts]
earnings-calculator = "earnings_calculator.gui:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/earnings_calculator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
